--- a/dev/tutorials/mern/frontend/index.html
+++ b/dev/tutorials/mern/frontend/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg" />
+      rel="shortcut icon"
+      href="./src/assets/icons/cyberpunk.png"
+      type="image/png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>The Last Stand</title>
   </head>
   <body>
     <div id="root"></div>
