Login page looks pretty much done

--- a/dev/the-last-stand/index.html
+++ b/dev/the-last-stand/index.html
@@ -6,6 +6,10 @@
       rel="shortcut icon"
       href="./src/assets/icons/cyberpunk.png"
       type="image/png" />
+    <link
+      rel="stylesheet"
+      href="./src/client/styles/fonts.css" />
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
@@ -13,7 +17,6 @@
   </head>
   <body>
     <div id="root"></div>
-
     <script
       type="module"
       src="/src/client/main.tsx"></script>
