--- a/dev/the-last-stand/index.html
+++ b/dev/the-last-stand/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link
       rel="shortcut icon"
-      href="./public/assets/icons/cyberpunk.png"
+      href="/assets/icons/cyberpunk.png"
       type="image/png" />
     <link
       rel="stylesheet"
