--- a/dev/the-last-stand/index.html
+++ b/dev/the-last-stand/index.html
@@ -1,3 +1,10 @@
+<!-- 
+# Nom du fichier : index.html
+# Contexte : Un fichier de type html qui permet d'afficher l'application sur le navigateur
+# Nom de l'auteur : Vite
+# Autres étudiants : Jonathan Robinson,Andrzej Wisniowski 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
